// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonGroup size 1`] = `
<div
  class="t-button-group"
  role="group"
>
  <button
    class="t-button t-button--type-default t-button--icon-l t--size-sm"
  />
  <button
    class="t-button t-button--type-default t-button--icon-l t--size-sm"
  />
</div>
`;

exports[`ButtonGroup size 2`] = `
<div
  class="t-button-group"
  role="group"
>
  <button
    class="t-button t-button--type-default t-button--icon-l t--size-lg"
  />
  <button
    class="t-button t-button--type-default t-button--icon-l t--size-lg"
  />
</div>
`;
